| Summary: | ASTERISK-25076: res_pjsip: Failover does not occur on connection-less transport or 503 response | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2015-05-10 09:04:39 | Date Closed: | 2015-07-06 11:53:13 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | 13.3.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Page 9 of RFC3263 (SIP: Locating SIP Servers) describes when failover should occur when sending a request. It states:
{noformat} For SIP requests, failure occurs if the transaction layer reports a 503 error response or a transport failure of some sort (generally, due to fatal ICMP errors in UDP or connection failures in TCP). Failure also occurs if the transaction layer times out without ever having received any response, provisional or final (i.e., timer B or timer F in RFC 3261 [1] fires). If a failure occurs, the client SHOULD create a new request, which is identical to the previous, but has a different value of the Via branch ID than the previous (and therefore constitutes a new SIP transaction). That request is sent to the next element in the list as specified by RFC 2782. {noformat} This does not currently occur for connectionless protocols or for 503 responses in the res_pjsip module or PJSIP itself. Note that this may include connection based protocols as well, but those have not yet been tested. This issue may be tweaked accordingly in the future. | ||
| Comments: | |||